// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transpiler More complex 1`] = `
"if (!ejs || typeof ejs.context !== \\"function\\") {
	foo = ejs;
	if (typeof window !== \\"undefined\\") {
		ejs = window.ejs;
	} else if (typeof global !== \\"undefined\\") {
		ejs = global.ejs;
	} else {
		return Promise.reject(new Error(\\"EJS module is not loaded\\"));
	}
}
foo = ejs.context(foo, {\\"strict\\":false,\\"localsName\\":\\"foo\\"},\\"undefined\\");
with(foo) {
	echo(\`
OK, so have fun! :D
-------------------
\`);
}
return foo.resolveOutput();"
`;

exports[`Transpiler Simple case / strict mode 1`] = `
"\\"use strict\\";
if (!ejs || typeof ejs.context !== \\"function\\") {
	fooBar = ejs;
	if (typeof window !== \\"undefined\\") {
		ejs = window.ejs;
	} else if (typeof global !== \\"undefined\\") {
		ejs = global.ejs;
	} else {
		return Promise.reject(new Error(\\"EJS module is not loaded\\"));
	}
}
fooBar = ejs.context(fooBar, {\\"strict\\":true,\\"localsName\\":\\"fooBar\\"},\\"undefined\\");
fooBar.echo(\`
    <foo> <%%
    \`);
return fooBar.resolveOutput();"
`;

exports[`Transpiler Simple case 1`] = `
"if (!ejs || typeof ejs.context !== \\"function\\") {
	foo = ejs;
	if (typeof window !== \\"undefined\\") {
		ejs = window.ejs;
	} else if (typeof global !== \\"undefined\\") {
		ejs = global.ejs;
	} else {
		return Promise.reject(new Error(\\"EJS module is not loaded\\"));
	}
}
foo = ejs.context(foo, {\\"strict\\":false,\\"localsName\\":\\"foo\\"},\\"undefined\\");
with(foo) {
	echo(\`
    <foo> <%%
    \`);
}
return foo.resolveOutput();"
`;
